<resources>
    <string name="app_name">Personal Dictionary</string>

    <string name="action_save">Export to Excel &amp; CSV</string>
    <string name="action_share">Share Your Dictionary</string>
    <string name="action_backup">Backup &amp; Restore</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_rate">Rate App</string>

    <string name="action_help_message">Click word to edit them !\nYou can find your saved documents on \nStorage/Simple Personal Dictionary folder !</string>

    <string name="about_title_simplepersonaldictionary">Simple Personal Dictionary</string>
    <string name="about_simplepersonaldictionary">This mobile application designed and coded by Emre Baran. Some icons and graphs have CC-BY License. Some of them are free for personal and commercial use. And a few of them are designed by Emre Baran.</string>
    <string name="about_title_special_thanks">Special Thanks</string>
    <string name="about_special_thanks">Chris Leversuch : Thank you for alphabet scroller.</string>
    <string name="about_title_application">About Application</string>
    <string name="about_application">This application is open-source software. You can find the source codes on GitHub: mree58 \nFeel free to contact if you have any ideas or problems with application. Mail: emrebaran.ceng@gmail.com</string>
    <string name="about_title_permissions">About Permissions</string>
    <string name="about_permissions">WRITE_EXTERNAL_STORAGE: for saving your personel dictionary \nREAD_EXTERNAL_STORAGE: for exporting your personel dictionary to Excel document</string>
    <string name="about_application_version">Application Version: 1.2.0</string>
    <string name="about_supported_languages">Supported Languages: English, Türkçe</string>

    <string name="app_exit">Press Again To Exit</string>

    <string name="popup_edt_word">Word</string>
    <string name="popup_edt_explanation">Explanation</string>

    <string name="warning_word">Word cannot be blank !</string>
    <string name="warning_explanation">Explanation cannot be blank !</string>

    <string name="export_db">Exporting database ... !</string>
    <string name="export_succees_csv">Export CSV succeed !</string>
    <string name="export_fail_csv">Export CSV failed !</string>
    <string name="export_succees_xls">Export Excel succeed !</string>
    <string name="export_fail_xls">Export Excel failed !</string>
    <string name="export_sheet">Sheet1</string>

    <string name="delete_word">Are you sure you want to delete this word ?</string>
    <string name="update_word">Are you sure you want to update this explanation ?</string>

    <string name="update_word_succeded">Explanation is updated !</string>
    <string name="update_word_failed">Error occurred !</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="warning_empty">No Word Added Yet !</string>

    <string name="exportDb">Backup</string>
    <string name="importDb">Restore</string>

    <string name="export_warning">There is no data to backup !</string>

    <string name="backup_question">Restoring may you lose current data and alarms !</string>
    <string name="backup_before_import">Do you want backup current database before import an old one ?</string>
    <string name="backup_current_file">Backup Current Database</string>
    <string name="backup_select_file">Select Backup File</string>
    <string name="backup_empty">Backup file is empty !</string>
    <string name="backup_import_error">Error import !</string>
    <string name="backup_export_error">Error backup !</string>
    <string name="backup_load_error">Error load file !</string>
    <string name="backup_importing_dialog">Importing ...</string>
    <string name="backup_import_success">Restore succeeded</string>
    <string name="backup_export_success">Backup succeeded</string>


    <string name="share">Share will be available on next update !</string>


    <string name="permissions_management">Permissions Management</string>

    <string name="permissions_title">Need Permissions !</string>
    <string name="permissions_message">This app needs Storage permissions for exporting words to excel and backing up database.</string>
    <string name="permissions_grant">Grant</string>
    <string name="permissions_cancel">Cancel</string>
    <string name="permissions_goto">Go to Permissions to Grant Storage</string>
    <string name="permissions_unable">Unable to get Permission</string>

</resources>
