<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_purple"
    android:id="@+id/popup_1"
    >


    <TextView
        android:id="@+id/txtView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/about_title_simplepersonaldictionary" />


    <TextView
        android:id="@+id/txtView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_about_text_size"
        android:text="@string/about_simplepersonaldictionary" />


    <TextView
        android:id="@+id/txtView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/about_title_special_thanks" />

    <TextView
        android:id="@+id/txtView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_about_text_size"
        android:text="@string/about_special_thanks" />

    <TextView
        android:id="@+id/txtView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/about_title_application" />

    <TextView
        android:id="@+id/txtView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="@dimen/dimen_about_text_size"
        android:text="@string/about_application" />



    <TextView
        android:id="@+id/txtView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/about_title_permissions" />

    <TextView
        android:id="@+id/txtView12"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="@dimen/dimen_about_text_size"
        android:text="@string/about_permissions" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp">

        <TextView
            android:id="@+id/txtView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="@dimen/dimen_about_text_size"
            android:text="@string/about_application_version" />

        <TextView
            android:id="@+id/txtView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="@dimen/dimen_about_text_size"
            android:text="1.0.0" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp">

        <TextView
            android:id="@+id/txtView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="@dimen/dimen_about_text_size"
            android:text="@string/about_supported_languages" />

        <TextView
            android:id="@+id/txtView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="@dimen/dimen_about_text_size"
            android:text="English, Türkçe" />

    </LinearLayout>


</LinearLayout>